<resources>
    <string name="app_name">BudgetMinimalism</string>
    <string name="action_settings">Settings</string>
    <string name="SetIncomeCategories">Set Income Categories</string>
    <string name="income_label">Category 1</string>
    <string name="income_label2">Amount</string>
    <string name="income_label3">$~~~~</string>
    <string name="income_label4">Paycheck</string>
    <string name="income_label5">Dividends</string>
    <string name="income_label6">Gift</string>
    <string name="income_label7">Other</string>
    <string name="income_category2">Category 2</string>
    <string name="income_category_3">Category 3</string>
    <string name="income_category4">Category 4</string>
    <string name="income_category5">Category 5</string>
    <string name="welcomeText1">Welcome!</string>
    <string name="Income">Income</string>
    <string name="button_label3">Expense</string>
    <string name="button_label4">View</string>
    <string name="button_label5">Category</string>
    <string name="button_label6">Amount</string>
    <string name="text_label1">Input Income</string>
    <string name="optional">optional</string>
    <string name="Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="elipse">....</string>
    <string name="InputExpense">Input Expense</string>
    <string name="setexpensecats">Set Expense Categories</string>
    <string name="developerInfo">Developer Info</string>
    <string name="recentActivity">Recent Activity</string>
    <string name="recentActivities">Recent Activity</string>
    <string name="BudgetProgress">Budget Progess</string>
    <string name="ViewSpending">Budget % Complete</string>
    <string name="viewrecentbuttn">View Recent Activity</string>
    <string name="ViewPercent">View Percent Complete</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="email">Email</string>
    <string name="signupprompt">Don\'t Have an Account? SIGN UP</string>
    <string name="useremail_error">1</string>
    <string name="password_error">0</string>
    <string name="login_failed">1</string>
    <string name="resID">1</string>
    <string name="userpass_error">1</string>
    <string name="tvsignup">1</string>

    <!-- Below is a string array which hardcodes the expense categories -->
    <string-array name="expenseCategoriesArray">
        <item>Groceries</item>
        <item>Subscriptions</item>
        <item>Rent</item>
        <item>Dining out</item>
        <item>School</item>
        <item>Phone</item>
        <item>Car Insurance</item>
        <item>Other</item>
    </string-array>

    <!-- Below is a string array which hardcodes the income categories -->
    <string-array name="incomeCategoriesArray">
        <item>Paycheck</item>
        <item>Gift</item>
        <item>Dividends</item>
        <item>Loans</item>
        <item>Interest</item>
    </string-array>


</resources>
